ingress-new-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: '20m'
spec:
  # ingressClassName: adda-api
  rules:
    - http:
        paths:
          - path: /qa/?(.*)
            pathType: Prefix
            backend:
              service:
                name: qa-service
                port:
                  number: 80
          - path: /qa-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: qa-server-service
                port:
                  number: 7018
          - path: /budget/?(.*)
            pathType: Prefix
            backend:
              service:
                name: budget-service
                port:
                  number: 80
          - path: /budget-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: budget-server-service
                port:
                  number: 7019
          - path: /wip/?(.*)
            pathType: Prefix
            backend:
              service:
                name: wip-service
                port:
                  number: 80
          - path: /wip_api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: wip-server-service
                port:
                  number: 1080
          - path: /wip-transfer-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: wip-transfer-server-service
                port:
                  number: 1081
          - path: /mrp-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mrp-server-service
                port:
                  number: 9012
          - path: /it-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: it-server-service
                port:
                  number: 7020
          - path: /it/?(.*)
            pathType: Prefix
            backend:
              service:
                name: it-service
                port:
                  number: 80
          - path: /waste-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: waste-server-service
                port:
                  number: 7021
          - path: /mrp/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mrp-service
                port:
                  number: 80
          - path: /moodeng-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: moodeng-server-service
                port:
                  number: 3001
          - path: /discount-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: discount-server-service
                port:
                  number: 4159
          - path: /discount/?(.*)
            pathType: Prefix
            backend:
              service:
                name: discount-service
                port:
                  number: 80
          - path: /platform-seller-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: platform-seller-server-service
                port:
                  number: 7022
          - path: /linebot-notify-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: linebot-notify-server-service
                port:
                  number: 9017
          - path: /shoe-picture-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: shoe-picture-server
                port:
                  number: 9020
          - path: /sale-support/?(.*)
            pathType: Prefix
            backend:
              service:
                name: sale-support-service
                port:
                  number: 80
          - path: /exports/?(.*)
            pathType: Prefix
            backend:
              service:
                name: exports-service
                port:
                  number: 80
          - path: /exports-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: exports-server-service
                port:
                  number: 6888
          - path: /frontfac-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontfac-server-service
                port:
                  number: 5157
          - path: /frontfac/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontfac-service
                port:
                  number: 80
          - path: /costing-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: costing-server-service
                port:
                  number: 7777
          - path: /costing/?(.*)
            pathType: Prefix
            backend:
              service:
                name: costing-service
                port:
                  number: 80
          - path: /online/?(.*)
            pathType: Prefix
            backend:
              service:
                name: platform-online-service
                port:
                  number: 80
          - path: /online-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: platform-online-server-service
                port:
                  number: 9015
          - path: /cnm2/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cnm2-service
                port:
                  number: 80
          - path: /cnm2-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cnm2-server-service
                port:
                  number: 4161
          - path: /oee/?(.*)
            pathType: Prefix
            backend:
              service:
                name: oee-service
                port:
                  number: 80
          - path: /oee-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: oee-server-service
                port:
                  number: 6400
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 10.32.0.60
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
